// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation daily 1`] = `
<BD>
  <Navigation
    type="daily"
  >
    <BD
      type="daily"
    >
      <Nav
        dateLabel={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
          }
        }
        gotoToday={[MockFunction]}
        nextDay={[MockFunction]}
        prevDay={[MockFunction]}
        toggleWeekend={[MockFunction]}
        type="daily"
      >
        <div />
      </Nav>
    </BD>
  </Navigation>
</BD>
`;

exports[`Navigation monthly 1`] = `
<BD>
  <Navigation
    type="monthly"
  >
    <BD
      type="monthly"
    >
      <Nav
        dateLabel={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
          }
        }
        gotoToday={[MockFunction]}
        nextMonth={[MockFunction]}
        prevMonth={[MockFunction]}
        toggleWeekend={[MockFunction]}
        type="monthly"
      >
        <div />
      </Nav>
    </BD>
  </Navigation>
</BD>
`;

exports[`Navigation weekly 1`] = `
<BD>
  <Navigation
    type="weekly"
  >
    <BD
      type="weekly"
    >
      <Nav
        dateLabel={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
          }
        }
        gotoToday={[MockFunction]}
        nextWeek={[MockFunction]}
        prevWeek={[MockFunction]}
        toggleWeekend={[MockFunction]}
        type="weekly"
      >
        <div />
      </Nav>
    </BD>
  </Navigation>
</BD>
`;
